results/envoy-normal.yaml
admin:
  address:
    socket_address: {address: 0.0.0.0, port_value: 9901}
static_resources:
  listeners:
  - name: response_cache_verify
    address:
      socket_address: {address: 0.0.0.0, port_value: 10000}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: verify
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                text_format_source:
                  inline_string: "RID=%REQ(X-VERIFICATION-ID)% CODE=%RESPONSE_CODE% DETAIL=%RESPONSE_CODE_DETAILS% FLAGS=%RESPONSE_FLAGS% UPSTREAM=%UPSTREAM_HOST%\n"
          route_config:
            name: verify
            virtual_hosts:
            - name: fixture
              domains: ["*"]
              routes:
              - match: {prefix: /}
                route: {cluster: response-cache-upstream, timeout: 15s}
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: response-cache
                root_id: response-cache
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: '{"cache": {"type": "redis", "serviceName": "redis.static", "serviceHost": "redis-fixture", "servicePort": 6379, "timeout": 10000, "cacheKeyPrefix": "higress-audit:"}, "cacheKeyFromHeader": "x-http-cache-key", "cacheValueFromBodyType": "application/json"}'
                vm_config:
                  vm_id: response-cache
                  runtime: envoy.wasm.runtime.v8
                  code:
                    local: {filename: /etc/envoy/plugin.wasm}
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: response-cache-upstream
    type: LOGICAL_DNS
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: response-cache-upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: redis-fixture, port_value: 8080}
  - name: "outbound|6379||redis.static"
    type: LOGICAL_DNS
    connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: "outbound|6379||redis.static"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: redis-fixture, port_value: 6379}
